@@ -1,55 +1,48 @@
 # Introduction
 
-Apache plugin for `@devly` cli manager built with redux and yargs.
+Shell plugin for `@devly`.
 
 # Installation
 
-To add devly-apache plugin to your project, first make sure your project is set-up to consume Devly plugins (see https://github.com/aorinevo/devly-example#introduction).
+To add devly-shell plugin to your project, first make sure your project is set-up to consume Devly plugins (see https://github.com/aorinevo/devly-example#introduction).
 
 
-Next, install `@devly/devly-apache`:
+Next, install `@devly/devly-shell`:
 
 ```bash
-npm i @devly/devly-apache
+npm i @devly/devly-shell
 ```
 
 # Integration
 
-Use `addApacheConfig` action creator to update the apache state in the devly-store.  It is recommneded to place the initialState for apache in a `manifests/apache.js` file and requiring that file within the file that dispatches the action.
+Use `addShellConfig` action creator to update the shell state in the devly-store.  It is recommneded to place the initialState for shell in a `manifests/shell.js` file and requiring that file within the file that dispatches the action.
 
 ```js
-// mainfests/apache.js
+// mainfests/shell.js
 
 module.exports = {
-  projectPath: '/etc/apache2',
-  configBarrels: [
+  path: '~/.zshrc',
+  exports: [
     {
-      fileName: 'test-main.conf',
-      content: 'some content',
-      directory: 'other',
-    },
-  ],
-  certificatesAndKeys: [
-    {
-      fileName: 'cert.crt',
-      content: 'some cert 1',
-      directory: 'cert',
+      name: 'JAVA_HOME',
+      value: '/Library/Java/JavaVirtualMachines/jdk1.8.0_162.jdk/Contents/Home'
     },
     {
-      fileName: 'cert.key',
-      content: 'some key 1',
-      directory: 'cert',
+      name: 'MAVEN_HOME',
+      value: '/usr/local/Cellar/maven/3.5.4/libexec'
     },
     {
-      fileName: 'server.crt',
-      content: 'some cert 2',
-      directory: 'cert',
+      name: 'MAVEN_OPTS',
+      value: '-Xmx1024m -Xms1024m -XX:MaxPermSize=1162m'
     },
     {
-      fileName: 'server.key',
-      content: 'some key 2',
-      directory: 'cert',
+      name: 'M2_OPTS',
+      value: '$MAVEN_OPTS'
     },
+    {
+      name: 'PATH',
+      value: '$MAVEN_HOME/bin:$JAVA_HOME/bin:$PATH'
+    }
   ],
 };
 ```
@@ -59,16 +52,16 @@ It is recommended that the consumer create a `plugins/index.js` barrel file for 
 ```js
 // plugins/index.js
 
-require('./apache.js');
+require('./shell.js');
 
-// plugins/apache.js
+// plugins/shell.js
 const {store} = require('@devly/devly-store');
-const {addApacheConfig, addApacheCommands} = require('@devly/devly-apache/actions');
+const {addApacheConfig, addApacheCommands} = require('@devly/devly-shell/actions');
 const {dispatch} = store;
 
-require('@devly/devly-apache');
+require('@devly/devly-shell');
 
-dispatch(addApacheConfig(require('./manifests/apache')));
+dispatch(addApacheConfig(require('./manifests/shell')));
 
 dispatch(addApacheCommands());
 ```
